res: applications in black and white

--- a/res/layout/manage_applications.xml
+++ b/res/layout/manage_applications.xml
@@ -15,31 +15,31 @@
 -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <LinearLayout android:id="@+id/list_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             android:visibility="gone">
-        <FrameLayout android:layout_width="match_parent"
+        <FrameLayout android:layout_width="fill_parent"
                 android:layout_height="0px"
                 android:layout_weight="1">
             <ListView android:id="@android:id/list"
                 android:drawSelectorOnTop="false"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
             <TextView android:id="@android:id/empty"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
                     android:gravity="center"
                     android:text="@string/no_applications"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
         </FrameLayout>
         <view class="com.android.settings.applications.LinearColorBar"
                 android:id="@+id/storage_color_bar"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-5dp"
                 android:orientation="horizontal"
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#000"
+                android:textColor="#ff000000"
                 android:singleLine="true" />
             <TextView android:id="@+id/storageChartLabel"
                 android:layout_width="wrap_content"
@@ -62,34 +62,32 @@
                 android:layout_weight="0"
                 android:layout_marginTop="-20dp"
                 android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#ccc"
-                android:shadowColor="#000"
-                android:shadowRadius="5"
+                android:textColor="#ff000000"
                 android:textStyle="bold"
                 android:singleLine="true"
                 android:text="@string/internal_storage" />
             <TextView android:id="@+id/freeStorageText"
-                android:layout_gravity="center_vertical|right"
+                android:layout_gravity="right|center"
                 android:layout_width="0px"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#000"
+                android:textColor="#ff000000"
                 android:singleLine="true" />
         </view>
     </LinearLayout>
 
     <view class="com.android.settings.applications.RunningProcessesView"
             android:id="@+id/running_processes"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:visibility="gone" />
 
     <LinearLayout android:id="@+id/loading_container"
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:visibility="gone"
             android:gravity="center">
 
