--- a/res/layout/running_processes_view.xml
+++ b/res/layout/running_processes_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
  * Copyright (C) 2010 Google Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,28 +16,28 @@
  -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
     <FrameLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="0px"
             android:layout_weight="1">
         <ListView android:id="@android:id/list"
-                android:layout_width="match_parent" 
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:drawSelectorOnTop="false"
                 android:fastScrollEnabled="true" />
         <TextView android:id="@android:id/empty"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:gravity="center"
                 android:text="@string/no_running_services"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
     </FrameLayout>
     <view class="com.android.settings.applications.LinearColorBar"
             android:id="@+id/color_bar"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
             android:orientation="horizontal"
@@ -54,7 +54,7 @@
             android:focusable="true"
             android:gravity="left|bottom"
             android:textAppearance="?android:attr/textAppearanceSmallInverse"
-            android:textColor="#000"
+            android:textColor="#ff000000"
             android:singleLine="true" />
         <TextView
             android:layout_width="wrap_content"
@@ -62,21 +62,19 @@
             android:layout_weight="0"
             android:layout_marginTop="-20dp"
             android:textAppearance="?android:attr/textAppearanceSmallInverse"
-            android:textColor="#ccc"
-            android:shadowColor="#000"
-            android:shadowRadius="5"
+            android:textColor="#ff000000"
             android:textStyle="bold"
             android:singleLine="true"
             android:text="@string/memory" />
         <TextView android:id="@+id/backgroundText"
-            android:layout_gravity="center_vertical|right"
+            android:layout_gravity="right|center"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:focusable="true"
             android:gravity="right|bottom"
             android:textAppearance="?android:attr/textAppearanceSmallInverse"
-            android:textColor="#000"
+            android:textColor="#ff000000"
             android:singleLine="true" />
     </view>
 </LinearLayout>
