--- a/res/xml/device_info_memory.xml
+++ b/res/xml/device_info_memory.xml
@@ -4,9 +4,9 @@
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-  
+
           http://www.apache.org/licenses/LICENSE-2.0
-  
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,12 +18,12 @@
 
     <PreferenceCategory android:key="memory_sd"
             android:title="@string/sd_memory">
-        <Preference android:key="memory_sd_size" 
-            style="?android:attr/preferenceInformationStyle" 
+        <Preference android:key="memory_sd_size"
+            style="?android:attr/preferenceInformationStyle"
             android:title="@string/memory_size"
             android:summary="00"/>
-        <Preference android:key="memory_sd_avail" 
-            style="?android:attr/preferenceInformationStyle" 
+        <Preference android:key="memory_sd_avail"
+            style="?android:attr/preferenceInformationStyle"
             android:title="@string/memory_available"
             android:summary="00"/>
         <Preference android:key="memory_sd_mount_toggle"
@@ -34,9 +34,24 @@
             android:summary="@string/sd_format_summary"/>
     </PreferenceCategory>
 
+    <PreferenceCategory android:key="memory_nand"
+        android:title="@string/nand_memory" >
+        <Preference android:key="memory_nand_size"
+            style="?android:attr/preferenceInformationStyle"
+            android:title="@string/memory_size"
+            android:summary="00" />
+        <Preference android:key="memory_nand_avail"
+            style="?android:attr/preferenceInformationStyle"
+            android:title="@string/memory_available"
+            android:summary="00" />
+        <Preference android:key="memory_nand_format"
+            android:title="@string/nand_format"
+            android:summary="@string/nand_format_summary" />
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/internal_memory">
-        <Preference android:key="memory_internal_avail" 
-            style="?android:attr/preferenceInformationStyle" 
+        <Preference android:key="memory_internal_avail"
+            style="?android:attr/preferenceInformationStyle"
             android:title="@string/memory_available"
             android:summary="00"/>
     </PreferenceCategory>
