--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -31,6 +31,14 @@
                 android:defaultValue="true" />
 
         <ListPreference
+                android:key="epd_full_timeout"
+                android:title="@string/epd_full_timeout"
+                android:summary="@string/epd_full_timeout_summary"
+                android:persistent="false"
+                android:entries="@array/epd_full_timeout_entries"
+                android:entryValues="@array/epd_full_timeout_values" />
+
+        <ListPreference
                 android:key="screen_timeout"
                 android:title="@string/screen_timeout"
                 android:summary="@string/screen_timeout_summary"
