--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -435,4 +435,20 @@
         <item>silent</item>
         <item>notsilent</item>
     </string-array>
+
+    <string-array name="epd_full_timeout_entries">
+        <item>1 minute</item>
+        <item>2 minutes</item>
+        <item>10 minutes</item>
+        <item>30 minutes</item>
+        <item>never</item>
+    </string-array>
+
+    <string-array name="epd_full_timeout_values">
+        <item>60000</item>
+        <item>120000</item>
+        <item>600000</item>
+        <item>1800000</item>
+        <item>-1</item>
+    </string-array>
 </resources>
