--- a/res/xml/display_settings_not_front_light.xml
+++ b/res/xml/display_settings_not_front_light.xml
@@ -19,6 +19,14 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
         <ListPreference
+                android:key="epd_full_timeout"
+                android:title="@string/epd_full_timeout"
+                android:summary="@string/epd_full_timeout_summary"
+                android:persistent="false"
+                android:entries="@array/epd_full_timeout_entries"
+                android:entryValues="@array/epd_full_timeout_values" />
+
+        <ListPreference
                 android:key="screen_timeout"
                 android:title="@string/screen_timeout"
                 android:summary="@string/screen_timeout_summary"
