--- a/res/values-pl/arrays.xml
+++ b/res/values-pl/arrays.xml
@@ -45,6 +45,18 @@
     <item msgid="5721688686241190620">"10 minut"</item>
     <item msgid="7156442995039264948">"30 minut"</item>
   </string-array>
+  <string-array name="power_off_timeout_entries">
+    <item>20 minut</item>
+    <item>30 minut</item>
+    <item>60 minut</item>
+    <item>nigdy nie wyłączaj</item>
+  </string-array>
+  <string-array name="power_off_timeout_values">
+    <item>1200000</item>
+    <item>1800000</item>
+    <item>3600000</item>
+    <item>-1</item>
+  </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Bardzo wolno"</item>
     <item msgid="2361722960903353554">"Wolno"</item>
