--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -46,6 +46,12 @@
     <item>"30 минут"</item>
     <item>Не включать спящий режим</item>
   </string-array>
+  <string-array name="power_off_timeout_entries">
+    <item>20 минут</item>
+    <item>30 минут</item>
+    <item>60 минут</item>
+    <item>Не отключать</item>
+  </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Очень медленная"</item>
     <item msgid="2361722960903353554">"Медленная"</item>
