--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -95,6 +95,20 @@
         <item>-1</item>
     </string-array>
 
+    <string-array name="power_off_timeout_entries">
+        <item>20 minute</item>
+        <item>30 minutes</item>
+        <item>60 minutes</item>
+        <item>never power off</item>
+    </string-array>
+
+    <string-array name="power_off_timeout_values">
+        <item>1200000</item>
+        <item>1800000</item>
+        <item>3600000</item>
+        <item>-1</item>
+    </string-array>
+
     <string-array name="hdmi_resolution_entries">
         <item>1920x1080p_50Hz</item>
         <item>1920x1080p_60Hz</item>
