--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -40,12 +40,11 @@
     <item msgid="488968798204105119">"Плавные переходы при переключении между окнами"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 секунд"</item>
-    <item msgid="8881760709354815449">"30 секунд"</item>
-    <item msgid="7589406073232279088">"1 минута"</item>
-    <item msgid="7001195990902244174">"2 минуты"</item>
-    <item msgid="5721688686241190620">"10 минут"</item>
-    <item msgid="7156442995039264948">"30 минут"</item>
+    <item>"3 минуты"</item>
+    <item>"5 минуты"</item>
+    <item>"10 минут"</item>
+    <item>"30 минут"</item>
+    <item>Не включать спящий режим</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Очень медленная"</item>
