--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -74,28 +74,25 @@
 
     <!-- Display settings.  The delay in inactivity before the screen is turned off. These are shown ain a list dialog. -->
     <string-array name="screen_timeout_entries">
-        <item>15 seconds</item>
-        <item>30 seconds</item>
-        <item>1 minute</item>
-        <item>2 minutes</item>
+        <item>3 minute</item>
+        <item>5 minutes</item>
         <item>10 minutes</item>
         <item>30 minutes</item>
+        <item>never sleep</item>
     </string-array>
 
     <!-- Do not translate. -->
     <string-array name="screen_timeout_values" translatable="false">
         <!-- Do not translate. -->
-        <item>15000</item>
+        <item>180000</item>
         <!-- Do not translate. -->
-        <item>30000</item>
-        <!-- Do not translate. -->
-        <item>60000</item>
-        <!-- Do not translate. -->
-        <item>120000</item>
+        <item>300000</item>
         <!-- Do not translate. -->
         <item>600000</item>
         <!-- Do not translate. -->
         <item>1800000</item>
+        <!-- Do not translate. -->
+        <item>-1</item>
     </string-array>
 
     <string-array name="hdmi_resolution_entries">
