--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -166,4 +166,16 @@
     <item>30 минут</item>
     <item>никогда</item>
   </string-array>
+  <string-array name="key_map_mode">
+    <item>"Вариант 1  "</item>
+    <item>"Вариант 2  "</item>
+    <item>"Вариант 3  "</item>
+    <item>"Вариант 4  "</item>
+  </string-array>
+  <string-array name="key_map_summary">
+    <item>" Левая верхняя -> Меню \n Левая нижняя -> Назад \n Правая верхняя -> Предыдущая страница \n Правая нижняя -> Следующая страница"</item>
+    <item>" Левая верхняя -> Меню \n Левая нижняя -> Назад \n Правая верхняя -> Следующая страница \n Правая нижняя -> Предыдущая страница"</item>
+    <item>" Левая верхняя -> Предыдущая страница \n Левая нижняя -> Следующая страница \n Правая верхняя -> Меню \n Правая нижняя -> Назад"</item>
+    <item>" Левая верхняя -> Следующая страница \n Левая нижняя -> Предыдущая страница \n Правая верхняя -> Меню \n Правая нижняя -> Назад"</item>
+  </string-array>
 </resources>
