--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -21,6 +21,9 @@
     <declare-styleable name="IconPreferenceScreen">
         <attr name="icon" format="reference" />
     </declare-styleable>
+    <declare-styleable name="SummaryListPreference">
+        <attr name="summaryText" format="string" />
+    </declare-styleable>
     
     <declare-styleable name="BatteryHistoryChart">
         <!-- Base text color, typeface, size, and style. -->
