--- a/res/layout/master_clear_final.xml
+++ b/res/layout/master_clear_final.xml
@@ -19,20 +19,23 @@
 
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#fff"
         style="@style/info_layout">        
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:text="@string/master_clear_final_desc" />
 
     <Button android:id="@+id/execute_master_clear"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dip"
-        android:layout_width="150dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/master_clear_final_button_text"
+        android:focusable="true"
+        android:enabled="true"
         android:gravity="center" />
         
 </LinearLayout>
