--- a/res/layout/master_clear_primary.xml
+++ b/res/layout/master_clear_primary.xml
@@ -19,6 +19,7 @@
 -->
 <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="#fff"
             style="@style/info_layout">
 
     <ScrollView
@@ -31,7 +32,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="23sp"
                 android:text="@string/master_clear_desc" />
             <LinearLayout android:id="@+id/erase_external_container"
                     android:layout_width="match_parent"
@@ -54,13 +55,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="12dp"
-                        android:textSize="18sp"
+                        android:textSize="23sp"
                         android:text="@string/erase_external_storage" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="4sp"
-                        android:textSize="14sp"
+                        android:textSize="19sp"
                         android:text="@string/erase_external_storage_description" />
                 </LinearLayout>
             </LinearLayout>
@@ -70,9 +71,10 @@
             android:id="@+id/initiate_master_clear"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dip"
-            android:layout_width="150dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/master_clear_button_text"
+            android:focusable="true"
             android:gravity="center" />
 
 </LinearLayout>
