--- a/res/layout/media_format_primary.xml
+++ b/res/layout/media_format_primary.xml
@@ -25,13 +25,13 @@
     <TextView android:id="@+id/initiate_media_format_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="23sp"
         android:text="@string/media_format_desc" />
 
     <Button android:id="@+id/initiate_media_format"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dip"
-        android:layout_width="150dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/media_format_button_text"
         android:gravity="center" />
