--- a/res/values-800x600/styles.xml
+++ b/res/values-800x600/styles.xml
@@ -1,43 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-/* //device/apps/Preferences/assets/res/any/styles.xml
-**
-** Copyright 2006, The Android Open Source Project
-**
-** Licensed under the Apache License, Version 2.0 (the "License"); 
-** you may not use this file except in compliance with the License. 
-** You may obtain a copy of the License at 
-**
-**     http://www.apache.org/licenses/LICENSE-2.0 
-**
-** Unless required by applicable law or agreed to in writing, software 
-** distributed under the License is distributed on an "AS IS" BASIS, 
-** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-** See the License for the specific language governing permissions and 
-** limitations under the License.
-*/
--->
 <resources>
-
     <style name="info_label">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.info_label</item>
         <item name="android:paddingRight">4dip</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
-
     <style name="info_value">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.info_value</item>
-    </style>
-
-    <style name="info_small">
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textAppearance">@style/TextAppearance.info_small</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
-
+    <style name="info_small">
+        <item name="android:textAppearance">@style/TextAppearance.info_small</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
     <style name="info_layout">
         <item name="android:orientation">vertical</item>
         <item name="android:paddingLeft">10dip</item>
@@ -47,86 +25,68 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
-
     <style name="entry_layout">
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    
     <style name="form_value">
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
-
-
-    <style name="TextAppearance" parent="android:TextAppearance">
-    </style>
-
-    <style name="TextAppearance.info_label">
+    <style name="TextAppearance" parent="android:TextAppearance" />
+    <style name="TextAppearance.info_label" parent="@style/TextAppearance">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-
-    <style name="TextAppearance.info_small">
+    <style name="TextAppearance.info_small" parent="@style/TextAppearance">
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
     </style>
-
-    <style name="TextAppearance.info_value">
+    <style name="TextAppearance.info_value" parent="@style/TextAppearance">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
     </style>
-
     <style name="TallTitleBarTheme" parent="android:Theme.NoTitleBar">
         <item name="android:windowContentOverlay">@null</item>
     </style>
-
     <style name="LightSettingsRatingBarStyle" parent="android:Widget.RatingBar">
         <item name="android:indeterminateOnly">false</item>
         <item name="android:indeterminateDrawable">@drawable/ratingbar_drawable</item>
         <item name="android:progressDrawable">@drawable/ratingbar_drawable</item>
     </style>
-
     <style name="TextAppearance.Large.Custom" parent="android:TextAppearance.Large">
-        <item name="android:textSize">27sp</item>
+        <item name="android:textSize">21sp</item>
         <item name="android:textStyle">normal</item>
     </style>
-
     <style name="TextAppearance.Medium.Custom" parent="android:TextAppearance.Medium">
-        <item name="android:textSize">23sp</item>
-        <item name="android:textStyle">normal</item>
-    </style>
-
-    <style name="TextAppearance.Small.Custom" parent="android:TextAppearance.Small">
         <item name="android:textSize">19sp</item>
         <item name="android:textStyle">normal</item>
     </style>
-
+    <style name="TextAppearance.Small.Custom" parent="android:TextAppearance.Small">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
     <style name="TextAppearance.WindowTitle.Custom" parent="android:TextAppearance.WindowTitle">
-        <item name="android:textSize">27sp</item>
+        <item name="android:textSize">21sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-
     <style name="WindowTitle.Custom" parent="android:Theme.NoTitleBar">
         <item name="android:textAppearance">@style/TextAppearance.WindowTitle.Custom</item>
         <item name="android:paddingLeft">0dip</item>
         <item name="android:shadowColor">#00000000</item>
         <item name="android:shadowRadius">0</item>
     </style>
-
     <style name="Widget.Button.Custom" parent="android:Widget.Button">
         <item name="android:textAppearance">?android:textAppearanceLargeInverse</item>
-        <item name="android:padding">15dip</item>
+        <item name="android:padding">9dip</item>
     </style>
-
     <style name="CustomTheme" parent="android:Theme">
         <item name="android:textAppearanceLarge">@style/TextAppearance.Large.Custom</item>
         <item name="android:textAppearanceMedium">@style/TextAppearance.Medium.Custom</item>
         <item name="android:textAppearanceSmall">@style/TextAppearance.Small.Custom</item>
         <item name="android:buttonStyle">@style/Widget.Button.Custom</item>
-        <item name="android:windowTitleSize">50dip</item>
+        <item name="android:windowTitleSize">42dip</item>
         <item name="android:windowTitleStyle">@style/WindowTitle.Custom</item>
     </style>
-    
 </resources>
