--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -81,5 +81,11 @@
     <style name="TallTitleBarTheme" parent="android:Theme.NoTitleBar">
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="LightSettingsRatingBarStyle" parent="android:Widget.RatingBar">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:indeterminateDrawable">@drawable/ratingbar_drawable</item>
+        <item name="android:progressDrawable">@drawable/ratingbar_drawable</item>
+    </style>
     
 </resources>
