--- a/res/xml/device_info_memory.xml
+++ b/res/xml/device_info_memory.xml
@@ -49,6 +49,18 @@
             android:summary="@string/nand_format_summary" />
     </PreferenceCategory>
 
+    <PreferenceCategory android:key="memory_host"
+        android:title="@string/host_memory" >
+        <Preference android:key="memory_host_size"
+            style="?android:attr/preferenceInformationStyle"
+            android:title="@string/memory_size"
+            android:summary="00" />
+        <Preference android:key="memory_host_avail"
+            style="?android:attr/preferenceInformationStyle"
+            android:title="@string/memory_available"
+            android:summary="00" />
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/internal_memory">
         <Preference android:key="memory_internal_avail"
             style="?android:attr/preferenceInformationStyle"
