--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -295,4 +295,8 @@
     <item msgid="5077768429488260031">"永不允许"</item>
     <item msgid="1417929597727989746">"始终允许"</item>
   </string-array>
+  <string-array name="entries_resolution">
+    <item>普清模式</item>
+    <item>高清模式</item>
+  </string-array>
 </resources>
