--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -772,4 +772,42 @@
         <!-- Always allow app to send to premium SMS short code. -->
         <item>Always allow</item>
     </string-array>
+
+    <string-array name="hdmi_resolution_entries">
+        <item>1920x1080p_50Hz</item>
+        <item>1920x1080p_60Hz</item>
+        <item>1280x720p_50Hz</item>
+        <item>1280x720p_60Hz</item>
+        <item>720x576p_50Hz</item>
+        <item>720x480p_60Hz</item>
+    </string-array>
+    <string-array name="hdmi_resolution_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+    <string-array name="hdmi_lcd_timeout_entries">
+        <item>10s</item>
+        <item>20s</item>
+        <item>30s</item>
+        <item>never sleep</item>
+    </string-array>
+    <string-array name="hdmi_lcd_timeout_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>-1</item>
+    </string-array>
+    <string-array name="entries_resolution">
+        <item>Normal</item>
+        <item>HD</item>
+    </string-array>
+    <string-array name="entryvalues_resolution">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
