--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -76,6 +76,12 @@
         android:fragment="com.android.settings.DisplaySettings"
         android:title="@string/display_settings" />
 
+    <header
+        android:id="@+id/hdmi_settings"
+        android:icon="@drawable/ic_settings_hdmi"
+        android:fragment="com.android.settings.HdmiControllerActivity"
+        android:title="@string/hdmi_settings" />
+
     <!-- Storage -->
     <header
         android:id="@+id/storage_settings"
