--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -20,103 +20,95 @@
     android:title="@string/settings_label"
     android:key="parent">
 
-        <com.android.settings.IconPreferenceScreen
-            android:title="@string/radio_controls_title"
-            settings:icon="@drawable/ic_settings_wireless">
+        <com.android.settings.MyIconPreferenceScreen
+            android:title="@string/radio_controls_title">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.WirelessSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Display -->
 
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_display"
+        <com.android.settings.MyIconPreferenceScreen
             android:title="@string/display_settings_title">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.DisplaySettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Application Settings -->
 
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_applications"
+        <com.android.settings.MyIconPreferenceScreen
             android:title="@string/applications_settings"
             android:key="applications_settings">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.ApplicationSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Privacy -->
 
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_privacy"
+        <com.android.settings.MyIconPreferenceScreen
             android:title="@string/privacy_settings"
             android:key="privacy_settings">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.PrivacySettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Storage -->
 
-        <com.android.settings.IconPreferenceScreen 
-            settings:icon="@drawable/ic_settings_storage"
+        <com.android.settings.MyIconPreferenceScreen
             android:title="@string/storage_settings">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.deviceinfo.Memory" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Language -->
 
-        <com.android.settings.IconPreferenceScreen
+        <com.android.settings.MyIconPreferenceScreen
             settings:icon="@drawable/ic_settings_language"
             android:title="@string/tts_default_lang_title">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.LanguageSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Voice input & output -->
 
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_speech"
+        <com.android.settings.MyIconPreferenceScreen
             android:key="voice_settings"
             android:title="@string/voice_input_output_settings">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.VoiceInputOutputSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Date & Time -->
 
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_date_time"
+        <com.android.settings.MyIconPreferenceScreen
             android:title="@string/date_and_time_settings_title">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.DateTimeSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- About Device -->
 
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_about"
+        <com.android.settings.MyIconPreferenceScreen
             android:title="@string/about_settings">
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.DeviceInfoSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
 </PreferenceScreen>
