--- a/res/layout/preference_icon.xml
+++ b/res/layout/preference_icon.xml
@@ -47,6 +47,9 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold"
             android:ellipsize="marquee"
             android:fadingEdge="horizontal" />
 
@@ -56,6 +59,7 @@
             android:layout_below="@android:id/title"
             android:layout_alignLeft="@android:id/title"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="bold"
             android:maxLines="2" />
 
     </RelativeLayout>
