--- a/res/layout/wifi_dialog_row.xml
+++ b/res/layout/wifi_dialog_row.xml
@@ -19,14 +19,17 @@
         android:layout_height="wrap_content">
     <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="150px"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10px"
             android:layout_marginRight="8dip"
+            android:textSize="20sp"
             android:textAppearance="?android:attr/textAppearanceSmallInverse" />
     <TextView
             android:id="@+id/value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmallInverse"
+            android:textSize="20sp"
             android:textStyle="bold" />
 </LinearLayout>
