--- a/res/xml/device_info_memory.xml
+++ b/res/xml/device_info_memory.xml
@@ -18,39 +18,39 @@
 
     <PreferenceCategory android:key="memory_sd"
             android:title="@string/sd_memory">
-        <Preference android:key="memory_sd_size" 
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_sd_size"
             style="?android:attr/preferenceInformationStyle" 
             android:title="@string/memory_size"
             android:summary="00"/>
-        <Preference android:key="memory_sd_avail" 
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_sd_avail"
             style="?android:attr/preferenceInformationStyle" 
             android:title="@string/memory_available"
             android:summary="00"/>
-        <Preference android:key="memory_sd_mount_toggle"
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_sd_mount_toggle"
             android:title="@string/sd_eject"
             android:summary="@string/sd_eject_summary"/>
-        <Preference android:key="memory_sd_format"
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_sd_format"
             android:title="@string/sd_format"
             android:summary="@string/sd_format_summary"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:key="memory_nand"
         android:title="@string/nand_memory">
-        <Preference android:key="memory_nand_size"
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_nand_size"
             style="?android:attr/preferenceInformationStyle"
             android:title="@string/memory_size"
             android:summary="00" />
-        <Preference android:key="memory_nand_avail"
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_nand_avail"
             style="?android:attr/preferenceInformationStyle"
             android:title="@string/memory_available"
             android:summary="00" />
-        <Preference android:key="memory_nand_format"
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_nand_format"
             android:title="@string/nand_format_2"
             android:summary="@string/nand_format_summary" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/internal_memory">
-        <Preference android:key="memory_internal_avail" 
+        <com.android.settings.MyIconPreferenceScreen android:key="memory_internal_avail"
             style="?android:attr/preferenceInformationStyle" 
             android:title="@string/memory_available"
             android:summary="00"/>
