--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -18,7 +18,7 @@
         android:title="@string/display_settings"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-        <ListPreference
+        <com.android.settings.MyListPreference
                 android:key="screen_timeout"
                 android:title="@string/screen_timeout"
                 android:summary="@string/screen_timeout_summary"
@@ -26,7 +26,7 @@
                 android:entries="@array/screen_timeout_entries"
                 android:entryValues="@array/screen_timeout_values" />
 
-        <ListPreference
+        <com.android.settings.MyListPreference
                 android:key="refresh_times"
                 android:title="@string/refresh_settings"
                 android:summary="@string/refresh_times_summary"
@@ -34,7 +34,7 @@
                 android:entries="@array/refresh_times_entries"
                 android:entryValues="@array/refresh_times_values" />
 
-        <ListPreference
+        <com.android.settings.MyListPreference
                 android:key="shutdown_timeout"
                 android:title="@string/shutdown_timeout"
                 android:summary="@string/shutdown_timeout_summary"
@@ -42,11 +42,11 @@
                 android:entries="@array/shutdown_timeout_entries"
                 android:entryValues="@array/shutdown_timeout_values" />
 
-        <PreferenceScreen
+        <com.android.settings.MyIconPreferenceScreen
                 android:title="@string/brightness">
         <intent android:targetPackage="xrz.com.bl"
                 android:action="android.intent.action.MAIN"
                 android:targetClass="xrz.com.bl.BackLightActivity" />
-        </PreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
 </PreferenceScreen>
