--- a/res/xml/keyboard_settings.xml
+++ b/res/xml/keyboard_settings.xml
@@ -17,19 +17,19 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <CheckBoxPreference
+    <com.android.settings.MyCheckBoxPreference
             android:key="auto_replace"
             android:title="@string/auto_replace"
             android:summaryOn="@string/auto_replace_summary"
             android:summaryOff="@string/auto_replace_summary"
             android:persistent="false"/>
-    <CheckBoxPreference
+    <com.android.settings.MyCheckBoxPreference
             android:key="auto_caps"
             android:title="@string/auto_caps"
             android:summaryOn="@string/auto_caps_summary"
             android:summaryOff="@string/auto_caps_summary"
             android:persistent="false"/>
-    <CheckBoxPreference
+    <com.android.settings.MyCheckBoxPreference
             android:key="auto_punctuate"
             android:title="@string/auto_punctuate"
             android:summaryOn="@string/auto_punctuate_summary"
