--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -16,21 +16,21 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-    <PreferenceScreen
+    <com.android.settings.MyIconPreferenceScreen
             android:key="phone_language"
             android:title="@string/phone_language">
         <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.LocalePicker"/>
-    </PreferenceScreen>
+    </com.android.settings.MyIconPreferenceScreen>
 
-    <PreferenceScreen
+    <com.android.settings.MyIconPreferenceScreen
             android:key="hardkeyboard_category"
             android:title="@string/builtin_keyboard_settings_title"
             android:summary="@string/builtin_keyboard_settings_summary">
         <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.PhysicalKeyboardSettings"/>
-    </PreferenceScreen>
+    </com.android.settings.MyIconPreferenceScreen>
 
 </PreferenceScreen>
